# reserve-index-dtfs-solana

./: .ammanrc.js  .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  build-local.sh  config.toml  dev_deploy_programs.sh  download-programs.sh  eslint.config.mjs  justfile  package.json  rust-toolchain.toml  start-amman.sh  start-validator.sh  tsconfig.json
governance/: Anchor.toml  Cargo.toml
governance/program/src/processor/: process_deposit_governing_tokens.rs
programs/dtfs/: Cargo.toml
programs/dtfs/src/: error.rs  events.rs  lib.rs  state.rs
programs/dtfs/src/instructions/: example_ix.rs  mod.rs
programs/dtfs/src/instructions/admin/: init_dtf_signer.rs  mod.rs  set_dao_fee_config.rs
programs/dtfs/src/instructions/crank/: crank_fee_distribution.rs  distribute_fees.rs  mod.rs  poke_folio.rs
programs/dtfs/src/instructions/folio_program/: init_first_owner.rs  mod.rs  resize_folio.rs  update_folio.rs
programs/dtfs/src/instructions/owner/: add_to_basket.rs  add_tokens_to_folio.rs  finalize_basket.rs  finalize_folio.rs  init_or_update_actor.rs  kill_folio.rs  mod.rs  remove_actor.rs  remove_from_basket.rs  resize_folio.rs  update_folio.rs
programs/dtfs/src/instructions/stake/: accrue_rewards.rs  add_reward_token.rs  claim_rewards.rs  init_or_set_reward_ratio.rs  mod.rs  remove_reward_token.rs
programs/dtfs/src/instructions/trade/: approve_trade.rs  bid.rs  kill_trade.rs  open_trade.rs  open_trade_permissionless.rs
programs/dtfs/src/instructions/user/: burn_folio_token.rs  close_pending_token_amount.rs  close_pending_token_amounts.rs  close_user_pending_token_amount.rs  init_or_add_mint_folio_token.rs  mint_folio_token.rs  mod.rs  redeem_from_burn_folio_token.rs  remove_from_mint_folio_token.rs
programs/dtfs/src/utils/: mod.rs
programs/dtfs/src/utils/accounts/: actor.rs  dao_fee_config.rs  mod.rs
programs/folio/: Cargo.toml  build.rs
programs/folio-admin/: Cargo.toml
programs/folio-admin/src/: events.rs  lib.rs  state.rs
programs/folio-admin/src/instructions/: init_program_registrar.rs  mod.rs  set_dao_fee_config.rs  set_folio_fee_config.rs  update_program_registrar.rs
programs/folio-admin/src/utils/accounts/: dao_fee_config.rs  folio_fee_config.rs  mod.rs  program_registrar.rs
programs/folio/src/: error.rs  events.rs  lib.rs  state.rs
programs/folio/src/instructions/: burn_folio_token.rs  init_folio.rs  mint_folio_token.rs  mod.rs  resize_folio_account.rs  transfer_folio_token.rs  update_folio.rs  validate_mutate_actor_action.rs
programs/folio/src/instructions/admin/: init_folio_signer.rs  init_or_update_community.rs  init_program_registrar.rs  mod.rs  update_program_registrar.rs
programs/folio/src/instructions/auction/: add_rebalance_details.rs  approve_auction.rs  bid.rs  close_auction.rs  mod.rs  open_auction.rs  open_auction_permissionless.rs  set_dust_limit_for_token.rs  start_rebalance.rs
programs/folio/src/instructions/crank/: crank_fee_distribution.rs  distribute_fees.rs  mint_from_new_folio_program.rs  mod.rs  poke_folio.rs
programs/folio/src/instructions/dummy/: dummy_instruction.rs
programs/folio/src/instructions/init/: finish_init_tokens_for_folio.rs  init_folio.rs  init_or_update_actor.rs  init_tokens_for_folio.rs  mod.rs  remove_actor.rs  resize_folio_account.rs  update_folio.rs
programs/folio/src/instructions/owner/: add_to_basket.rs  finalize_basket.rs  init_folio.rs  init_folio_2022.rs  init_or_update_actor.rs  kill_folio.rs  mod.rs  remove_actor.rs  remove_from_basket.rs  resize_folio.rs  update_folio.rs
programs/folio/src/instructions/stake/: accrue_rewards.rs  add_reward_token.rs  claim_rewards.rs  init_or_set_reward_ratio.rs  remove_reward_token.rs
programs/folio/src/instructions/trade/: approve_trade.rs  bid.rs  kill_trade.rs  mod.rs  open_trade.rs  open_trade_permissionless.rs
programs/folio/src/instructions/user/: burn_folio_token.rs  close_pending_token_amount.rs  close_user_pending_token_amount.rs  init_or_add_mint_folio_token.rs  mint_folio_token.rs  mod.rs  redeem_from_burn_folio_token.rs  remove_from_mint_folio_token.rs  transfer_from_user_pending_basket_ata.rs
programs/folio/src/utils/: account_util.rs  math_util.rs  mod.rs  token_util.rs
programs/folio/src/utils/accounts/: actor.rs  auction.rs  auction_ends.rs  fee_distribution.rs  fee_recipients.rs  folio.rs  folio_basket.rs  folio_fee_recipients.rs  folio_token_metadata.rs  mod.rs  pending_basket.rs  pending_token_amounts.rs  program_registrar.rs  rebalance.rs  reward_info.rs  reward_token.rs  (+3 more)
programs/rewards/: Cargo.toml
programs/rewards/src/: events.rs  lib.rs  state.rs
programs/rewards/src/instructions/: accrue_rewards.rs  add_reward_token.rs  claim_rewards.rs  init_or_set_reward_ratio.rs  mod.rs  remove_reward_token.rs  set_rewards_admin.rs
programs/rewards/src/utils/: mod.rs
shared/: Cargo.toml  build.rs
shared/src/: errors.rs  lib.rs
shared/src/constants/: common.rs  mod.rs  seeds.rs
shared/src/structs/: decimal.rs  fee_recipient.rs  folio_status.rs  mod.rs  range.rs  roles.rs  token_amount.rs  trade_end.rs
shared/src/util/: account_util.rs  math_util.rs  mod.rs
shared/src/utils/: account_util.rs  math_util.rs  mod.rs  token_util.rs
tests/: Cargo.toml  mod.rs  tests-dtfs.ts  tests-folio.ts  tests-governance.ts  tests-multisig.ts
tests/dtf/: mod.rs  test_actor.rs  test_program_registrar.rs
tests/fixtures/: fixtures.rs
tests/folio/: mod.rs  serde.rs  test_actor.rs  test_auction.rs  test_fee_distribution.rs  test_fee_recipients.rs  test_fixed_size_string.rs  test_folio.rs  test_folio_basket.rs  test_folio_fee_recipients.rs  test_folio_status.rs  test_math_util.rs  test_pending_basket.rs  test_pending_token_amounts.rs  test_program_registrar.rs  test_rebalance.rs  test_reward_info.rs  test_reward_token.rs  test_roles.rs  test_trade.rs  test_user_pending_basket.rs  test_user_reward_info.rs
tests/folio_admin/: mod.rs  test_program_registrar.rs
tests/rewards/: mod.rs  test_reward_info.rs  test_reward_token.rs  test_user_reward_info.rs
tests/shared/: logger.rs  mod.rs  test_math_util.rs  test_roles.rs
(+126 files in other folders)
