[workspace]
members = [
    "programs/folio",
    "programs/folio-admin",
    "programs/rewards",
    # "tests",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.31.0" }
anchor-spl = "0.31.0"
bytemuck = "1"
spl-math = { version = "*", features = ["no-entrypoint"] }
proc-macro2 = "<1.0.95"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }
ambiguous_glob_reexports = { level = "allow" }