[workspace]
members = [
    "programs/folio",
    "programs/folio-admin",
    "programs/rewards",
    "tests",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
proc-macro2 = "=1.0.94"