[workspace]
members = [
    "programs/folio",
    "programs/folio-admin",
    "programs/rewards",
    "tests"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "=0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.31.1", features = ["metadata"] }
anyhow = "^1.0.97"
bytemuck = "=1.23.2"
folio = { path = "./programs/folio", features = ["no-entrypoint"] }
folio_admin = { path = "./programs/folio-admin", features = ["no-entrypoint"] }
rewards = { path = "programs/rewards", features = ["no-entrypoint"] }
shared = { path = "shared" }
spl-token-metadata-interface = "0.7.0"
spl-type-length-value = "0.8.0"
spl-math =  { version = "0.3.0", features = ["no-entrypoint"] }
dotenv = "0.15.0"
log = "^0.4.26"
lazy_static = "1.4.0"
simplelog = "^0.12.2"
time = "0.3.37"
solana-program = "=2.3.0"
solana-instruction = "=2.3.0"
solana-zk-sdk= "2.2.0"
borsh= "1.5.7"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
solana-system-interface = {version= "1.0.0", features = ["bincode"]}
spl-pod = "0.5.1"