[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
crate-type = ["lib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
spl-math = { workspace = true }

[build-dependencies]
dotenv = "0.15"

[lints]
workspace = true 

[features]
localnet = []
devnet = []
mainnet = []
default = ["localnet"]

