[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
name = "shared"
crate-type = ["lib"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
bytemuck  = { workspace = true }
spl-math  = { workspace = true }
solana-program  = { workspace = true }
spl-token-2022 = { workspace =  true }
solana-system-interface = { workspace = true }

[build-dependencies]
dotenv = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[features]
default = []
dev = []
test = []
