[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
folio_admin = { path = "../programs/folio-admin", features = ["no-entrypoint"] }
folio = { path = "../programs/folio", features = ["no-entrypoint"] }
rewards = { path = "../programs/rewards", features = ["no-entrypoint"] }
anchor-lang = { workspace = true }
spl-math = { workspace = true }

[dev-dependencies]
lazy_static = "1.4.0"

[[test]]
name = "integration"
path = "mod.rs"
