[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
anyhow = "^1.0.97"
dotenv = "^0.15.0"
folio = { path = "../programs/folio", features = ["no-entrypoint"] }
folio_admin = { path = "../programs/folio-admin", features = ["no-entrypoint"] }
log = "^0.4.26"
rewards = { path = "../programs/rewards", features = ["no-entrypoint"] }
shared = { path = "../shared" }
simplelog = "^0.12.2"
spl-math = { version = "=0.2.0", features = ["no-entrypoint"] }
time = "0.3.37"

[dev-dependencies]
lazy_static = "1.4.0"

[[test]]
name = "integration"
path = "mod.rs"
