[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
dotenv = { workspace = true }
folio = { workspace = true }
folio_admin = { workspace = true }
log = { workspace = true }
rewards = { workspace = true }
shared = { workspace = true }
simplelog = { workspace = true }
spl-math = { workspace = true }
time = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }

[[test]]
name = "integration"
path = "mod.rs"
