[package]
name = "folio"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "folio"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
prod = []
localnet = ["shared/localnet"]
devnet = ["shared/devnet"]
mainnet = ["shared/mainnet"]
default = []


[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
mpl-token-metadata = "=5.1.0"
folio_admin = { path = "../folio-admin", features = ["no-entrypoint"] }
shared = { path = "../../shared" }
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"

[lints]
workspace = true 
