[package]
name = "folio"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "folio"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

dev = ["shared/dev", "folio_admin/dev"]
# This feature is used to build the folio with dev
test = ["shared/test", "folio_admin/test"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
folio_admin = { workspace = true }
shared = { workspace = true }
spl-token-metadata-interface = { workspace = true }
spl-type-length-value = { workspace = true }
spl-token-2022 = { workspace = true }
spl-pod = { workspace = true }
solana-system-interface = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
