[package]
name = "rewards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
prod = []
localnet = ["shared/localnet"]
devnet = ["shared/devnet"]
mainnet = ["shared/mainnet"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
shared = { path = "../../shared" }
proc-macro2 = { workspace = true }

[lints]
workspace = true 
