[package]
name = "rewards"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

dev = ["shared/dev"]
test = ["shared/test"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
bytemuck = { workspace = true }
shared = { path = "../../shared" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
